# nnkit-learn

./: .gitignore  LICENSE  README.md  test.ipynb
nklearn/backend_ndarray/: __init__.py  _device.py  _random.py  ndarray.py
nklearn/cppsrc/: CMakeLists.txt  Makefile  createTemplateInstance.py  ndarray_backend_cpu.cc  templatedCode.cpp
nklearn/ndarray/: _device.py  _dtype.py  ndarray.py
